# container-oomkill

./: .editorconfig  .gitattributes  Dockerfile  Dockerfile.exporter  Makefile  README.md  container_oomkill.bt  docker-compose.yml  exporter.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
container-oomkill-exporter/: Dockerfile  stat.csv
coomkill-exporter/: Dockerfile  coomkill.bt  exporter.py
exporter/: Dockerfile  container_oomkill.bt  exporter.py
grafana/: coomkill_dashboard.json
mem-stress/: main.py
prometheus/: prometheus.yml
